@@ -1,7 +1,7 @@
-FROM openjdk:8-jdk-alpine
+FROM openjdk:11-jdk
 VOLUME /tmp
 ARG DEPENDENCY=target/dependency
 COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY ${DEPENDENCY}/META-INF /app/META-INF
 COPY ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","by.bsuir.demo.DemoApplication"]
+ENTRYPOINT ["java","-cp","app:app/lib/*","--add-opens","java.base/java.lang=ALL-UNNAMED","by.bsuir.demo.DemoApplication"]
